--- a/experiencia.html
+++ b/experiencia.html
@@ -1,1 +1,24 @@
-experiencia
+<!DOCTYPE html>
+<html lang="es" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-widts, user-scalable=width">
+    <title>Experiencia</title>
+  </head>
+  <header>
+    <svg width="240" height="100" xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg">
+      <!-- Created with SVG-edit - https://github.com/SVG-Edit/svgedit-->
+      <g class="layer">
+      <title>Mi Logo</title>
+      <rect fill="#ffffff" height="91" id="svg_2" stroke="#000000" stroke-dasharray="null" stroke-linecap="null" stroke-linejoin="null" stroke-width="5" width="168" x="2.6" y="3.1"/>
+      <path d="m7.964533,88.35c0,0 -1.022707,-38.5 -0.511353,-38.5c0.511353,0 29.147139,-22 29.147139,-22c0,0 47.044505,27.5 46.788828,27.25c-0.255677,-0.25 42.698002,-16.75 42.698002,-16.75c0,0 38.862852,15 38.862852,15c0,0 -0.511353,36.5 -0.76703,36.25c-0.255677,-0.25 -156.218437,-1.25 -156.218437,-1.25z" fill="#005fbf" id="svg_1" stroke="#000000" stroke-dasharray="null" stroke-linecap="null" stroke-linejoin="null" stroke-width="2"/>
+      <circle cx="84.8" cy="21.2" fill="#b2b2b2" id="svg_4" r="7.572686" stroke="#ffffff" stroke-dasharray="null" stroke-linecap="null" stroke-linejoin="null"/>
+      <text fill="#ffffff" font-family="serif" font-size="24" id="svg_5" stroke="#000000" stroke-dasharray="null" stroke-linecap="null" stroke-linejoin="null" stroke-width="0" text-anchor="middle" transform="matrix(1.84657 0 0 1 -181.953 0)" x="122.54661" xml:space="preserve" y="80.8">R</text>
+      <text fill="#ffffff" font-family="serif" font-size="24" id="svg_8" stroke="#000000" stroke-dasharray="null" stroke-linecap="null" stroke-linejoin="null" stroke-width="0" text-anchor="middle" transform="matrix(1.6683 0 0 1.02943 -61.0733 -1.29471)" x="107.342649" xml:space="preserve" y="79.976955">T</text>
+      </g>
+    </svg>
+  </header>
+  <body>
+    <a href="index.html">Volver a Inicio</a>
+  </body>
+</html>
