--- a/educacion.html
+++ b/educacion.html
@@ -2,8 +2,8 @@
 <html lang="es" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-widts, user-scalable=width">
-    <title></title>
+    <meta name="viewport" content="width=device-width, user-scalable="no"">
+    <title>Educación</title>
   </head>
   <header>
     <svg width="240" height="100" xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg">
@@ -19,6 +19,73 @@
     </svg>
   </header>
   <body>
-    <a href="index.html">Volver a Inicio</a>
+    <h1>Resumen Curricular</h1>
+    <h2>Datos Personales</h2>
+    <h2>Nombres : <em>René Mauricio</em></h2>
+    <h2>Apellidos :<em> Tejos Tapia</em></h2>
+    <h3>Fecha de Nacimiento :<em>24 de Enero de 1973</em></h3>
+    <br>
+    <div class="principal2">
+      <div>
+          <a href="index.html">Inicio</a>
+          <a href="educacion.html">Educación</a>
+          <a href="experiencia.html">Experiencia</a>
+      </div>
+      <h2>Educación</h2>
+      <table border="1"">
+      <thead>
+        <tr>
+          <th>Año</th>
+          <th>Institución</th>
+          <th>Lugar</th>
+          <th>¿ Culminado ?</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td>no</td>
+        </tr
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td>no</td>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td>no</td>
+        </tr>
+      </tbody>
+      </table>
+      <form autocomplete="on" name="Envio" action="" method="post">
+        <fieldset>
+          <legend>Agregar Estudios</legend>
+          <label for="amo">Año :</label>
+          <select name="amos">
+            <option value="1">2022</option>
+            <option value="1">2021</option>
+            <option value="1">2020</option>
+            <option selected value="1">2019</option>
+            <option value="1">2018</option>
+            <option value="1">2017</option>
+            <option value="1">2016</option>
+            <option value="1">2015</option>
+            <option value="1">2014</option><br>
+          </select><br>
+            <label for="inst">Institución</label>
+            <input type="text" name="institucion" required value=""><br>
+            <label for="lugar">Lugar</label>
+            <input type="text" name="lugar" required value=""><br><br>
+            <input type="submit" name="enviar" value="Enviar">
+        </fieldset>
+      </form>
   </body>
+  <footer>
+    <h3>Información de Contacto es : Copyright&copy  softwaresappweb@gmail.com  Derechos Reservados&reg.</h3>
+  </footer>
 </html>
