--- a/experiencia.html
+++ b/experiencia.html
@@ -19,6 +19,37 @@
     </svg>
   </header>
   <body>
-    <a href="index.html">Volver a Inicio</a>
+    <h1>Experiencia Curricular</h1>
+    <h2>Datos Personales</h2>
+    <h2>Nombres : <em>René Mauricio</em></h2>
+    <h2>Apellidos :<em> Tejos Tapia</em></h2>
+    <h3>Fecha de Nacimiento : <em>24 de Enero de 1973</em></h3>
+    <br>
+    <div class="principal3">
+      <div>
+          <a href="index.html">Inicio</a>
+          <a href="educacion.html">Educación</a>
+          <a href="experiencia.html">Experiencia</a>
+      </div>
+    </div>
+    <h2>Experiencia</h2><br>
+    <h3>Mi video  (no es personal, se descargo de internet)</h3>
+    <video preload="auto" controls poster="video/mivideo.mp4" width="250px" height="140px">
+      <source src="video/mivideo.mp4" type="video/ogg">
+      <source src="video/mivideo.mp4" type="video/webm">
+      <source src="video/mivideo.mp4" type="video/mp4">  
+        tu navegador no soporta ingun formato
+    </video><br>
+    <h3>Mi audio (no es personal, se descargo de internet)</h3>
+    <audio controls>
+          <source src="audio/miaudio.mp3" type="audio/mp3">
+    </audio>
+
+
+    <br>
+
   </body>
+  <footer>
+    <h3>Información de Contacto es : Copyright&copy  softwaresappweb@gmail.com  Derechos Reservados&reg.</h3>
+  </footer>
 </html>
