--- a/educacion.html
+++ b/educacion.html
@@ -42,7 +42,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr>
+        <!-- <tr>
           <td></td>
           <td></td>
           <td></td>
@@ -53,12 +53,12 @@
           <td></td>
           <td></td>
           <td>no</td>
-        </tr>
+        </tr>-->
         <tr>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td>no</td>
+          <td>2019</td>
+          <td>Futuro Kpaz</td>
+          <td>Concepción</td>
+          <td>Sí</td>
         </tr>
       </tbody>
       </table>
